# efg_trans

./: .gitignore  Dockerfile  config.yaml  docker-compose.yaml  pyproject.toml  requirements.txt  test_config.py  test_device.py  test_translate.py
docs/: CHANGELOG.md  DEVELOPMENT_GUIDELINES.md  IDEA-0001-input-modus-SeamlessM4T-v2.md  IDEA-0002-continuous-duplex-pipeline.md  IDEA-0002-dynamic-vad-sensitivity.md  PROJECT_BRIEFING.md
docs/adr/: ADR-0001-local-s2s-seamlessm4t.md  ADR-0002-continuous-duplex-pipeline.md  ADR-0003-dynamic-vad-sensitivity.md
docs/guides/: visualizer.md
docs/tasks/: DEV_SPEC-0000-template.md  DEV_SPEC-0001-local-s2s-seamlessm4t.md  DEV_SPEC-0002-continuous-duplex-pipeline.md  DEV_SPEC-0003-dynamic-vad-sensitivity.md  DEV_TASKS-0000-template.md  DEV_TASKS-0001-local-s2s-seamlessm4t.md  DEV_TASKS-0002-continuous-duplex-pipeline.md  DEV_TASKS-0003-dynamic-vad-sensitivity.md  DEV_TECH_DESIGN-0000-template.md  DEV_TECH_DESIGN-0001-local-s2s-seamlessm4t.md  DEV_TECH_DESIGN-0002-continuous-duplex-pipeline.md  DEV_TECH_DESIGN-0003-dynamic-vad-sensitivity.md
src/api/: main.py
src/core/: config.py  device_manager.py  translator_engine.py  vad_processor.py
static/: index.html
tests/: test_vad.py  test_ws_client.py
